# anomalib-cloud

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt
anomalib_cloud/components/: README.txt  create.py  train.yaml
anomalib_cloud/docker/: Dockerfile
anomalib_cloud/train/: command.py  config.yaml  requirements.txt
anomalibcloud/components/: README.txt  create.py  train.yaml
anomalibcloud/docker/: Dockerfile
anomalibcloud/train/: command.py  config.yaml  requirements.txt
notebooks/: cloud_training.ipynb  train_azure.ipynb
