[tool.poetry]
name = "anomalib_cloud"
version = "0.0.1"
authors = ["Johannes Hecher <johannes.hecher@crayon.com>"]
description = ""
packages = [
    { include = "anomalib_cloud" }
]

[tool.poetry.dependencies]
python = "^3.8.1"
anomalib_tools = { git = "https://github.com/hanshannus/anomalib-tools.git", branch = "main" }

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.1.0"
flake8 = "^6.0.0"
pre-commit = "^3.1.1"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
